pressing button gets info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">MeleeMatchFinder</string>
-    <string name="name_prompt">Please enter a nickname:</string>
+    <string name="name_prompt">Please enter your username:</string>
+    <string name="api_prompt">Please enter your API key:</string>
+    <string name="TO">TO login</string>
+    <string name="guest">view bracket</string>
     <string name="refresh">refresh</string>
     <string name="send">send</string>
     <string name="tag">Tag</string>
